# openims

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  VONR_MISSING_FEATURES.md  config.yaml
apps/icscfd/: main.cpp
apps/imsd/: main.cpp
apps/pcscfd/: main.cpp
apps/scscfd/: main.cpp
ims/auth/include/ims/auth/: auth_provider.hpp
ims/auth/src/: auth_provider.cpp
ims/core/include/ims/core/: config.hpp  log.hpp
ims/core/src/: config.cpp  log.cpp  time.cpp
ims/cx/include/ims/cx/: cx_client.hpp
ims/cx/src/: cx_stub_client.cpp
ims/dhcp/include/ims/dhcp/: dhcp_server.hpp
ims/dhcp/src/: dhcp_server.cpp
ims/dns/include/ims/dns/: dns_resolver.hpp
ims/dns/src/: dns_resolver.cpp
ims/icscf/include/ims/icscf/: icscf_service.hpp
ims/icscf/src/: icscf_service.cpp
ims/ipsec/include/ims/ipsec/: xfrm_manager.hpp
ims/ipsec/src/: xfrm_manager.cpp
ims/media/src/: rtpengine_client.cpp  sdp_rewriter.cpp
ims/n5/include/ims/n5/: n5_client.hpp  n5_models.hpp
ims/n5/src/: n5_client.cpp  n5_models.cpp  qos_policy.cpp
ims/pcscf/include/ims/pcscf/: pcscf_service.hpp
ims/pcscf/src/: pcscf_service.cpp
ims/policy/src/: qos_hook.cpp
ims/scscf/include/ims/scscf/: call_session.hpp  registration_sm.hpp  scscf_service.hpp  subscription_sm.hpp
ims/scscf/src/: call_session.cpp  registration_sm.cpp  scscf_service.cpp  subscription_sm.cpp
ims/sip/include/ims/sip/: b2bua_relay.hpp  pani_parser.hpp  proxy_router.hpp  sdp.hpp  sip_message.hpp  sip_stack.hpp
ims/sip/src/: b2bua_relay.cpp  pani_parser.cpp  proxy_router.cpp  sdp.cpp  sip_message.cpp  sip_stack.cpp
ims/storage/include/ims/storage/: location_service.hpp
ims/storage/src/: location_service.cpp  subscription_service.cpp
ims/tests/: test_location_service.cpp  test_registration_sm.cpp  test_sdp_rewriter.cpp
src/auth/: auth_provider.cpp  auth_provider.hpp
src/core/: config.cpp  config.hpp  log.cpp  time.cpp  time.hpp
src/cx/: cx_client.hpp  cx_stub_client.cpp
src/dhcp/: dhcp_server.cpp
src/dns/: dns_resolver.cpp
src/icscf/: icscf_service.cpp  icscf_service.hpp
src/ipsec/: xfrm_manager.cpp
src/media/: rtpengine_client.cpp  rtpengine_client.hpp  sdp_rewriter.cpp  sdp_rewriter.hpp
src/n5/: n5_client.cpp  n5_client.hpp  n5_models.cpp  n5_models.hpp  qos_policy.cpp  qos_policy.hpp
src/pcscf/: pcscf_service.cpp
src/policy/: qos_hook.cpp  qos_hook.hpp
src/scscf/: call_session.cpp  registration_sm.cpp  registration_sm.hpp  scscf_service.cpp  scscf_service.hpp  subscription_sm.cpp  subscription_sm.hpp
src/sip/: b2bua_relay.cpp  b2bua_relay.hpp  pani_parser.cpp  proxy_router.cpp  proxy_router.hpp  sdp.cpp  sip_message.cpp  sip_message.hpp  sip_stack.cpp
src/storage/: location_service.cpp  subscription_service.cpp  subscription_service.hpp
tests/: test_location_service.cpp  test_registration_sm.cpp  test_sdp_rewriter.cpp
tools/: sipp_demo.sh  uac_register.xml
